# pyKaraoke

./: README.md  pyproject.toml
Songs/: song_list.html  song_list.md
src/pyKaraoke/: pyKaraoke.py  script.py  song.j2
src/pyKaraoke/Songs/: song_list.md
